Upgrade dependencies and create Dockerfile